<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_mode"
        android:icon="@drawable/ic_view"
        android:title="@string/action_view_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_close_selection"
        android:icon="@drawable/ic_close"
        android:title="@string/action_cancel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_add"
        android:title="@string/action_upload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upload_folder"
        android:title="@string/action_upload_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_album"
        android:title="@string/action_add_to_album"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_phone"
        android:title="@string/action_save_to_phone"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
